--- a/css/index.css
+++ b/css/index.css
@@ -1,191 +1,408 @@
-body {
-  font-family: "Be Vietnam", sans-serif;
-  overflow: hidden;
-}
-
-.wrap {
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 0;
-  padding-left: 55px;
-  padding-right: 55px;
-}
-
-.wrap-home {
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 0;
-  padding-left: 20%;
-  padding-right: 20%;
-}
-
-body#index {
-  background-image: url("../resources/img/back_home.jpg");
-  background-position: center top;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
-}
-
-#navigation-home {
-  padding-top: 40px;
-  display: flex;
-}
-#navigation-home #logo {
-  width: 180px;
-}
-#navigation-home nav {
-  display: flex;
-  margin-left: auto;
-  align-items: center;
-}
-#navigation-home nav div {
-  background: #975BB9 0% 0% no-repeat padding-box;
-  box-shadow: 0px 3px 30px #00000045;
-  border-radius: 90px;
-  height: 42px;
-  display: flex;
-  margin-left: 35px;
-}
-#navigation-home nav li {
-  list-style: none;
-  font-weight: 600;
-  font-size: 16px;
-  color: #FFFAD2;
-  margin: auto;
-  padding-bottom: 2px;
-  padding-left: 25px;
-  padding-right: 25px;
-}
-
-#selection {
-  margin-top: 15vh;
-}
-#selection div {
-  display: flex;
-}
-#selection img {
-  margin-right: 20px;
-  transform: rotate(180deg);
-}
-#selection p {
-  font-weight: 800;
-  font-size: 64px;
-  letter-spacing: -2.4px;
-  color: #473041;
-  margin-bottom: 3vh;
-}
-
-body#ressources {
-  background-image: url("../resources/img/back_ressources.jpg");
-  background-position: center bottom;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
-}
-
-.wrap-content {
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 0;
-  padding-left: 30%;
-  padding-right: 30%;
-}
-
-#navigation {
-  padding-top: 40px;
-  display: flex;
-}
-#navigation p {
-  font-weight: 800;
-  font-size: 18px;
-  letter-spacing: -0.72px;
-  color: #473041;
-}
-#navigation div, #navigation div > a {
-  display: flex;
-  align-items: center;
-}
-#navigation div:first-of-type img {
-  margin-right: 18px;
-}
-#navigation div:last-of-type {
-  margin-left: auto;
-}
-#navigation div:last-of-type img {
-  width: 35px;
-  padding-left: 22px;
-}
-
-h1 {
-  font-weight: 800;
-  letter-spacing: -2.4px;
-  font-size: 70px;
-  color: #473041;
-  padding-top: 5vh;
-  margin-bottom: 4vh;
-}
-
-ul {
-  display: grid;
-  grid-template-columns: repeat(3, auto);
-  grid-column-gap: 20px;
-  grid-row-gap: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-ul li {
-  width: 100%;
-  list-style: none;
-  font-size: 16px;
-  letter-spacing: -0.72px;
-  font-weight: 800;
-  color: #473041;
-  border: 1px solid #473041;
-  border-radius: 22px;
-  margin: auto;
-  text-align: center;
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-
-.list-container {
-  margin-top: 6vh;
-  height: 60vh;
-  overflow-y: scroll;
-}
-.list-container .list-element {
-  background: #FFFFFF 0% 0% no-repeat padding-box;
-  border-radius: 28px;
-  display: flex;
-  padding-left: 7%;
-  padding-right: 10%;
-  justify-content: space-between;
-  align-items: center;
-  padding-bottom: 3.5vh;
-  padding-top: 3.5vh;
-  margin-bottom: 4vh;
-}
-.list-container .list-element div:first-of-type {
-  width: 80%;
-}
-.list-container .list-element h2 {
-  font-size: 30px;
-  font-weight: 800;
-  letter-spacing: -0.9px;
-  color: #473041;
-  margin-bottom: 5%;
-}
-
-body#services {
-  background-image: url("../resources/img/back_services.jpg");
-  background-position: center bottom;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
-}
-
-/*# sourceMappingURL=index.css.map */
+body {
+  font-family: "Be Vietnam", sans-serif;
+  overflow: hidden;
+}
+
+.wrap {
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  padding-left: 55px;
+  padding-right: 55px;
+}
+
+.wrap-home {
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  padding-left: 20%;
+  padding-right: 20%;
+}
+
+body#index {
+  background-image: url("../img/back_home.jpg");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+
+.hamburger {
+  display: none;
+}
+
+#navigation-home {
+  padding-top: 40px;
+  display: flex;
+}
+#navigation-home #logo {
+  width: 180px;
+}
+#navigation-home nav {
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+}
+#navigation-home nav div {
+  background: #975BB9 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 30px #00000045;
+  border-radius: 90px;
+  height: 42px;
+  display: flex;
+  margin-left: 35px;
+}
+#navigation-home nav li {
+  list-style: none;
+  font-weight: 600;
+  font-size: 16px;
+  color: #FFFAD2;
+  margin: auto;
+  padding-bottom: 2px;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+#navigation-home nav li a {
+  color: #FFFAD2;
+}
+
+#selection {
+  margin-top: 15vh;
+}
+#selection div {
+  display: flex;
+}
+#selection img {
+  margin-right: 20px;
+  transform: rotate(180deg);
+}
+#selection p {
+  font-weight: 800;
+  font-size: 64px;
+  letter-spacing: -2.4px;
+  color: #473041;
+  margin-bottom: 3vh;
+}
+
+.menu_ul {
+  margin: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.menu_ul li:first-of-type {
+  margin-bottom: 30px;
+}
+.menu_ul li a {
+  list-style: none;
+  font-weight: 600;
+  font-size: 16px;
+  color: #473041;
+  margin: auto;
+  padding-bottom: 2px;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.menu_js {
+  background: #FFFAD2;
+  z-index: 10;
+  text-align: center;
+  opacity: 0;
+  transition-duration: 0.4s;
+  margin-left: auto;
+  width: 20%;
+  margin-right: 5%;
+}
+
+.active {
+  opacity: 1;
+  transition-duration: 0.4s;
+}
+
+.leave {
+  opacity: 0;
+  transition-duration: 0.4s;
+}
+
+@media all and (max-width: 1170px) {
+  .wrap-home {
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+}
+@media all and (max-width: 980px) {
+  #selection {
+    margin-top: 10vh;
+  }
+
+  .wrap-home {
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+}
+@media all and (max-width: 768px) {
+  #selection p {
+    font-size: 45px;
+  }
+
+  #navigation-home nav div {
+    height: 35px;
+  }
+
+  #navigation-home nav li {
+    font-size: 13px;
+    padding-left: 19px;
+    padding-right: 19px;
+  }
+
+  #navigation-home nav {
+    display: none;
+  }
+
+  .hamburger {
+    display: block;
+    margin-left: auto;
+    z-index: 999;
+    position: absolute;
+    right: 3%;
+  }
+}
+@media all and (max-width: 480px) {
+  #selection {
+    margin-top: 50vh;
+    transform: translateY(-50%);
+  }
+
+  #selection p {
+    font-size: 40px;
+  }
+
+  body#index {
+    background-image: none;
+    background: #FFFAD2;
+  }
+
+  #selection {
+    display: flex;
+    flex-direction: column;
+  }
+  #selection div {
+    margin: auto;
+    padding-top: 5vh;
+  }
+
+  .hamburger.is-active .hamburger-inner::after {
+    background-color: #473041;
+  }
+
+  .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+    background-color: #473041;
+  }
+}
+body#ressources {
+  background-image: url("../img/back_ressources.jpg");
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+
+.wrap-content {
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  padding-left: 30%;
+  padding-right: 30%;
+}
+
+#navigation {
+  padding-top: 40px;
+  display: flex;
+}
+#navigation p {
+  font-weight: 800;
+  font-size: 18px;
+  letter-spacing: -0.72px;
+  color: #473041;
+}
+#navigation div, #navigation div > a {
+  display: flex;
+  align-items: center;
+}
+#navigation div:first-of-type img {
+  margin-right: 18px;
+}
+#navigation div:last-of-type {
+  margin-left: auto;
+}
+#navigation div:last-of-type img {
+  width: 35px;
+  padding-left: 22px;
+}
+
+h1 {
+  font-weight: 800;
+  letter-spacing: -2.4px;
+  font-size: 70px;
+  color: #473041;
+  padding-top: 5vh;
+  margin-bottom: 4vh;
+}
+
+.wrap-content ul {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-column-gap: 20px;
+  grid-row-gap: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.wrap-content ul li {
+  width: 100%;
+  list-style: none;
+  font-size: 16px;
+  letter-spacing: -0.72px;
+  font-weight: 800;
+  color: #473041;
+  border: 1px solid #473041;
+  border-radius: 22px;
+  margin: auto;
+  text-align: center;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
+.list-container {
+  margin-top: 6vh;
+  height: 60vh;
+  overflow-y: scroll;
+}
+.list-container .list-element {
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border-radius: 28px;
+  display: flex;
+  padding-left: 7%;
+  padding-right: 10%;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 3.5vh;
+  padding-top: 3.5vh;
+  margin-bottom: 4vh;
+}
+.list-container .list-element div:first-of-type {
+  width: 80%;
+}
+.list-container .list-element h2 {
+  font-size: 30px;
+  font-weight: 800;
+  letter-spacing: -0.9px;
+  color: #473041;
+  margin-bottom: 5%;
+}
+
+body#services {
+  background-image: url("../img/back_services.jpg");
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+
+body#jobs {
+  background-image: url("../img/back_jobs.jpg");
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+
+body#inscription, body#connexion {
+  background: #473041;
+  background-size: cover;
+  height: 100vh;
+}
+
+#inscription h1, #connexion h1 {
+  font-weight: 800;
+  font-size: 64px;
+  letter-spacing: -2.4px;
+  color: #FFFAD2;
+  text-align: center;
+  padding-top: 25vh;
+}
+
+.wrap-inscription, .wrap-connexion {
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  padding-left: 34%;
+  padding-right: 34%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  border: none;
+  background: none;
+  border-bottom: 3px solid #FFFAD2;
+  font-family: "Be Vietnam", sans-serif;
+  font-weight: 600;
+  font-size: 28px;
+  letter-spacing: -0.99px;
+  color: #FFFAD2;
+  outline: none;
+}
+
+input::placeholder {
+  opacity: 0.6;
+}
+
+form div {
+  display: flex;
+  justify-content: space-between;
+}
+form div input {
+  width: 47%;
+}
+
+input[type=email], input[type=password] {
+  width: 100%;
+  padding-top: 30px;
+}
+
+input[type=submit] {
+  border: none;
+  background: #975BB9 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 30px #0000003D;
+  border-radius: 52px;
+  font-size: 22px;
+  padding-bottom: 4px;
+  padding-left: 25px;
+  padding-right: 25px;
+  margin: auto;
+  margin-top: 60px;
+}
+
+.wrap-connexion p {
+  margin: auto;
+  font-weight: 500;
+  font-size: 15px;
+  color: #FFFAD2;
+  padding-top: 30px;
+}
+
+/*# sourceMappingURL=index.css.map */
