--- a/includes/pages/connexion.html
+++ b/includes/pages/connexion.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Le bon étudiant - inscription</title>
+	<title>Le bon étudiant - Connexion</title>
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="css/libs/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/libs/hamburger.css">
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Be+Vietnam:400,500,600,700,800&display=swap" rel="stylesheet">
 </head>
 
-<body id="inscription" class="wrap">
+<body id="connexion" class="wrap">
 	<div id="navigation">
 		<div>
 			<a href="index.html">
@@ -21,18 +21,14 @@
 		</div>
 		<div></div>
 	</div>
-	<div class="wrap-inscription">
-		<h1>Enchanté !</h1>
+	<div class="wrap-connexion">
+		<h1>Rebonjour !</h1>
 		<form action="">
-			<div>
-				<input type="text" placeholder="Nom">
-				<input type="text" placeholder="Prénom">
-			</div>
 			<input type="email" placeholder="Adresse Mail">
 			<input type="password" placeholder="Mot de Passe">
-			<input type="submit" value="S'inscrire">
-		</form>
-		
+			<input type="submit" value="Se connecter">
+		<form action="">
+		<p>Mot de passe oublié ?</p>
 	</div>
 	
 
