--- a/css/index.css
+++ b/css/index.css
@@ -405,4 +405,19 @@ input[type=submit] {
   padding-top: 30px;
 }
 
+.error-page {
+  text-align: center;
+  color: #FFFAD2;
+}
+
+.error-page h1 {
+  padding-top: 10px !important;
+}
+
+.error-page img {
+  margin: 10px;
+  border-radius: 5px;
+  border: 1px solid #FFFAD2;
+}
+
 /*# sourceMappingURL=index.css.map */
