--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,7 @@ body {
 }
 
 body#index {
-  background-image: url("../img/back_home.jpg");
+  background-image: url("../resources/img/back_home.jpg");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
@@ -258,7 +258,7 @@ body#index {
   }
 }
 body#ressources {
-  background-image: url("../img/back_ressources.jpg");
+  background-image: url("../resources/img/back_ressources.jpg");
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -370,7 +370,7 @@ h1 {
 }
 
 body#services {
-  background-image: url("../img/back_services.jpg");
+  background-image: url("../resources/img/back_services.jpg");
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -378,7 +378,7 @@ body#services {
 }
 
 body#jobs {
-  background-image: url("../img/back_jobs.jpg");
+  background-image: url("../resources/img/back_jobs.jpg");
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: cover;
